Fix scrolling across result overlays and prepare 2.2.2 (#20)